<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <include
        android:id="@+id/include"
        layout="@layout/toolbar_base" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/include"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="100dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/color_main"
                        android:src="@mipmap/icon_login_username" />

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="5dp"
                        android:background="@color/color_main" />

                    <EditText
                        android:id="@+id/et_login_username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="@string/prompt_userName"
                        android:maxLines="1"
                        android:paddingLeft="8dp"
                        android:textColor="@color/colorTextBlack"
                        android:textColorHint="@color/text_color"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/color_main" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/color_main"
                        android:src="@mipmap/icon_login_password" />

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="5dp"
                        android:background="@color/color_main" />

                    <EditText
                        android:id="@+id/et_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingLeft="8dp"
                        android:textColor="@color/colorTextBlack"
                        android:textColorHint="@color/text_color"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btn_longin"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@color/color_main"
            android:text="@string/link_start"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_registerAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginTop="26dp"
            android:gravity="right"
            android:text="@string/registerAccount"
            android:textColor="@color/color_main" />
    </LinearLayout>
</RelativeLayout>